# RoBoat-Code

./: .gitignore  README.md
2021_Boat_Code/Gazebo/ROS_Simulation_ws/src/RoboBoat_Compition_Simulation_ROS/roboat_msgs/: package.xml
2021_Boat_Code/VS_Coding/: PID.cpp  main.cpp
2022_Boat_Code/: cmaketutorial.txt  jetbot_instructions.txt
2022_Boat_Code/Jetbot/: Hello_World.cpp  Jetbot.sln  Jetbot.vcxproj  Makefile  ReadMe.txt  main.cpp
2022_Boat_Code/Radio_Controller/: Radio_Controller.ino
2022_Boat_Code/RockPi/: 2022_Boat_Code.vcxproj  PinsDefintions.h  ReadMe.txt  main.cpp
2023_Boat_Code/Jetson/: README.md
2023_Boat_Code/Mega/: Mega.code-workspace  README.md
Arduino/E-Stop/: E-Stop.ino
Arduino/Kyle_timer_test/: Kyle_timer_test.ino
Arduino/Lidar_Sofware_Serial_Send.sln/: Lidar_Sofware_Serial_Send.sln.ino
Arduino/Main/: Main.ino
Arduino/jonah_sonar/: jonah_sonar.ino
Arduino/jonah_sonar_boat/: jonah_sonar_boat.ino
Arduino/jonah_sonar_testing/: jonah_sonar_testing.ino  new_sonar_test.ino
Arduino/kyle_test/: kyle_test.ino
Codebase_1-0/Raspberry/: main.py
Codebase_1-0/VS_Coding/: README.TXT  arduino.cpp  arduino.h
Codebase_2-0/Radio_Controller/: Radio_Controller.ino  radio_test.ino
Gazebo/gazebo_world_creator/: main.py
Jetson/: Serial
Python/Jetson/: main.py  test.py
Python/Software_Wolrd_Map/: main.py  (+1 more)
VS Coding/: VS Coding.sln  VS Coding.vcxproj  VS Coding.vcxproj.filters
VS_Coding/: PID.h  VS_Coding.sln  VS_Coding.vcxproj  VS_Coding.vcxproj.filters  arduino.cpp  arduino.h  main.cpp
gazebo_world_creator/: gazebo_world.py
(+186 files in other folders)
