<?xml verstion="1.0"?>
<package format="2">
	<name>roboat_msgs</name>
	<version>1.0.0</version>
	<description>
		Message and service types: custom messages and services for roboat_simulation package
	</description>
	<license>TODO</license>
	<author email="kylehouchin52700@gmail.com">Kyle Houchin</author>
	<maintainer email="kylehouchin52700@gmail.com">Kyle Houchin</maintainer>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<build_depend>message_generation</build_depend>
	<build_export_depend>message_runtime</build_export_depend>
	<exec_depend>message_runtime</exec_depend>
</package>
